estrutura do banner criada

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>GIT</title>
 </head>
 <body>
+    <div class="banner">
+        <img src="imagens/fundo.jpg" alt="imagens de fundo">
+        <h1>WELCOME</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.<br> Voluptatum dolore expedita quia amet aliquam, fugiat dolorum quisquam optio soluta <br>facilis ea commodi laborum autem provident sequi, nemo sint. Ipsam, facilis.</p>
+          <div class="botao">
+    
     
 </body>
 </html>
