header e main2 criado

--- a/index.html
+++ b/index.html
@@ -4,8 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GIT</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+        <header>
+            <nav>
+                <div class="cabecalho">
+                    <h1>NAME OF THE SITE</h1>
+                    <a href="#">HOME</a>
+                    <a href="#">SERVICES</a>
+                    <a href="#">ABOUT</a>
+                    <a href="#">WORKS</a>
+                    <a href="#">CONTACT</a>
+                </div>
+            </nav>
+        </header>
     
+    <main class="banner">
+
+    </main>
+    <main class="banner2">
+        <div>
+            <h2>Our Services</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque, eligendi <br> commodi quia ad obcaecati sunt qui </p>
+        </div>
+         <div class="main2">
+            <img src="images/unnamed.png" alt="">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque, eligendi commodi quia ad obcaecati sunt qui </p>
+        </div>
+        <div class="main2">
+            <img src="images/unnamed.png" alt="">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque, eligendi commodi quia ad obcaecati sunt qui </p>
+        </div>
+        <div class="main2">
+            <img src="images/unnamed.png" alt="">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque, eligendi commodi quia ad obcaecati sunt qui </p>
+        </div>
+    </main>
 </body>
 </html>
