header e main2 criado

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     </main>
     <main class="banner2">
-        <div>
+        <div class="btop">
             <h2>Our Services</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque, eligendi <br> commodi quia ad obcaecati sunt qui </p>
         </div>
